# serializer version: 1
# name: test_create_todo_list_item[description]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks?alt=json',
    'POST',
  )
# ---
# name: test_create_todo_list_item[description].1
  '{"title": "Soda", "status": "needsAction", "due": null, "notes": "6-pack"}'
# ---
# name: test_create_todo_list_item[due]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks?alt=json',
    'POST',
  )
# ---
# name: test_create_todo_list_item[due].1
  '{"title": "Soda", "status": "needsAction", "due": "2023-11-18T00:00:00-08:00", "notes": null}'
# ---
# name: test_create_todo_list_item[summary]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks?alt=json',
    'POST',
  )
# ---
# name: test_create_todo_list_item[summary].1
  '{"title": "Soda", "status": "needsAction", "due": null, "notes": null}'
# ---
# name: test_delete_todo_list_item[_handler]
  tuple(
    'https://tasks.googleapis.com/batch',
    'POST',
  )
# ---
# name: test_move_todo_item[api_responses0]
  list([
    dict({
      'status': 'needs_action',
      'summary': 'Water',
      'uid': 'some-task-id-1',
    }),
    dict({
      'status': 'needs_action',
      'summary': 'Milk',
      'uid': 'some-task-id-2',
    }),
    dict({
      'status': 'needs_action',
      'summary': 'Cheese',
      'uid': 'some-task-id-3',
    }),
  ])
# ---
# name: test_move_todo_item[api_responses0].1
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id-3/move?previous=some-task-id-1&alt=json',
    'POST',
  )
# ---
# name: test_move_todo_item[api_responses0].2
  None
# ---
# name: test_move_todo_item[api_responses0].3
  list([
    dict({
      'status': 'needs_action',
      'summary': 'Water',
      'uid': 'some-task-id-1',
    }),
    dict({
      'status': 'needs_action',
      'summary': 'Cheese',
      'uid': 'some-task-id-3',
    }),
    dict({
      'status': 'needs_action',
      'summary': 'Milk',
      'uid': 'some-task-id-2',
    }),
  ])
# ---
# name: test_move_todo_item[api_responses0].4
  None
# ---
# name: test_parent_child_ordering[api_responses0]
  list([
    dict({
      'status': 'needs_action',
      'summary': 'Task 1',
      'uid': 'task-1',
    }),
    dict({
      'status': 'needs_action',
      'summary': 'Task 2',
      'uid': 'task-2',
    }),
    dict({
      'status': 'needs_action',
      'summary': 'Task 3 (Parent)',
      'uid': 'task-3',
    }),
    dict({
      'status': 'needs_action',
      'summary': 'Task 4',
      'uid': 'task-4',
    }),
  ])
# ---
# name: test_partial_update[clear_description]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_partial_update[clear_description].1
  '{"title": "Water", "status": "needsAction", "due": null, "notes": null}'
# ---
# name: test_partial_update[clear_due_date]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_partial_update[clear_due_date].1
  '{"title": "Water", "status": "needsAction", "due": null, "notes": null}'
# ---
# name: test_partial_update[description]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_partial_update[description].1
  '{"title": "Water", "status": "needsAction", "due": null, "notes": "At least one gallon"}'
# ---
# name: test_partial_update[due_date]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_partial_update[due_date].1
  '{"title": "Water", "status": "needsAction", "due": "2023-11-18T00:00:00-08:00", "notes": null}'
# ---
# name: test_partial_update[empty_description]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_partial_update[empty_description].1
  '{"title": "Water", "status": "needsAction", "due": null, "notes": ""}'
# ---
# name: test_partial_update[rename]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_partial_update[rename].1
  '{"title": "Soda", "status": "needsAction", "due": null, "notes": null}'
# ---
# name: test_partial_update_status[api_responses0]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_partial_update_status[api_responses0].1
  '{"title": "Water", "status": "needsAction", "due": null, "notes": null}'
# ---
# name: test_update_todo_list_item[api_responses0]
  tuple(
    'https://tasks.googleapis.com/tasks/v1/lists/task-list-id-1/tasks/some-task-id?alt=json',
    'PATCH',
  )
# ---
# name: test_update_todo_list_item[api_responses0].1
  '{"title": "Soda", "status": "completed", "due": null, "notes": null}'
# ---
